--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,59 @@
-/* #subway-map {
-  position: absolute;
+/*
+.leaflet-fade-anim .leaflet-popup {
+  transition: none;
+} */
+
+#intro {
+  background-image: url('/img/subway1.jpg');
+  width: 100%;
+  color: #FFFFFF;
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+#title1 {
+  color: #fff;
+  text-shadow:
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;
+}
+
+#paragraph {
+  /* min-height: 30rem; */
+  /* position: relative; */
+  display: table;
+  width: 100%;
+  height: auto;
+  padding-top: 5rem;
+  padding-bottom: 8rem;
+  color: #FFFFFF;
+  text-shadow:
+    -2px -2px 0 #000,
+    2px -2px 0 #000,
+    -2px 2px 0 #000,
+    2px 2px 0 #000;
+  ;
+}
+
+#subway-map {
+  width: 100%;
+  height: 80%;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1000;
-} */
-
-.leaflet-fade-anim .leaflet-popup {
-  transition: none;
 }
 
-#intro {
-  color: #FFFFFF;
-  text-outline: 10px 10px #000000;
-}
-
-#subway-map {
-  width: 75%
+#panel {
+  width: 75%;
+  height: 20%;
+  padding-top: 2rem;
+  padding-bottom: 4rem;
 }
 
 #legend {
@@ -28,8 +64,6 @@
   margin-left: 15px;
   width: 10px;
 }
-
-
 
 .colorBox {
   height: 10px;
@@ -47,6 +81,102 @@ html {
 body {
   font-family: 'Source Sans Pro';
 }
+
+/* Side Menu */
+#sidebar-wrapper {
+  position: fixed;
+  z-index: 2;
+  right: 0;
+  width: 250px;
+  height: 100%;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  transform: translateX(250px);
+  background: #1D809F;
+  border-left: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sidebar-nav li.sidebar-nav-item a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 15px;
+}
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  font-size: 1.2rem;
+  background: rgba(52, 58, 64, 0.1);
+  height: 80px;
+  line-height: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #fff;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+
+#sidebar-wrapper.active {
+  right: 250px;
+  width: 250px;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+.menu-toggle {
+  position: fixed;
+  right: 15px;
+  top: 15px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  color: #fff;
+  background: rgba(52, 58, 64, 0.5);
+  line-height: 50px;
+  z-index: 999;
+}
+
+.menu-toggle:focus, .menu-toggle:hover {
+  color: #fff;
+}
+
+.menu-toggle:hover {
+  background: #343a40;
+}
+
+/* Buttons */
 
 .btn-xl {
   padding: 1.25rem 2.5rem;
@@ -79,57 +209,12 @@ h6 {
   color: rgba(255, 255, 255, 0.7);
 }
 
-/* Map */
-.map {
-  height: 100%;
-}
-
-@media (max-width: 992px) {
-  .map {
-    height: 100%;
-  }
-}
-
-.map iframe {
-  pointer-events: none;
-}
-
-.scroll-to-top {
-  position: fixed;
-  right: 15px;
-  bottom: 15px;
-  display: none;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  color: white;
-  background: rgba(52, 58, 64, 0.5);
-  line-height: 45px;
-}
-
-.scroll-to-top:focus, .scroll-to-top:hover {
-  color: white;
-}
-
-.scroll-to-top:hover {
-  background: #343a40;
-}
-
-.scroll-to-top i {
-  font-weight: 800;
-}
-
 .masthead {
   min-height: 30rem;
   position: relative;
   display: table;
   width: 100%;
   height: auto;
-  text-shadow:
-    -2px -2px 0 #000,
-    2px -2px 0 #000,
-    -2px 2px 0 #000,
-    2px 2px 0 #000;
   padding-top: 8rem;
   padding-bottom: 8rem;
   background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../img/subway2.jpg");
@@ -151,4 +236,29 @@ h6 {
   .masthead h1 {
     font-size: 5.5rem;
   }
+}
+
+.scroll-to-top {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  display: none;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  color: white;
+  background: rgba(63, 127, 191, 0.5);
+  line-height: 45px;
+}
+
+.scroll-to-top:focus, .scroll-to-top:hover {
+  color: white;
+}
+
+.scroll-to-top:hover {
+  background: #3366cc;
+}
+
+.scroll-to-top i {
+  font-weight: 800;
 }
