--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,11 @@
 }
 
 #intro {
-  /* background-image: url('/img/subway1.jpg'); */
-  background-color: black;
-  width: 100%;
+  background-image: url('/img/subway1.jpg');
   color: #FFFFFF;
   height: 100%;
-  width: 100%;
-  vertical-align: middle;
+  /* margin-left: 0;
+  margin-right: 0; */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
@@ -29,11 +27,11 @@
   /* min-height: 30rem; */
   /* position: relative; */
   display: table;
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   padding-top: 5rem;
   padding-bottom: 8rem;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   color: #FFFFFF;
   text-shadow:
     -2px -2px 0 #000,
@@ -54,26 +52,12 @@
 
 #panel {
   background-color: black;
+  margin-left: 0;
+  margin-right: 0;
   width: 100%;
   height: 20%;
   padding-top: 2rem;
   padding-bottom: 4rem;
-}
-
-#legend {
-  color: #000000;
-  float: right;
-  background: #ffffff;
-  padding: 12px;
-  margin-left: 15px;
-  width: 10px;
-}
-
-.colorBox {
-  height: 10px;
-  width: 10px;
-  float: left;
-  margin: 3px 4px 0 0;
 }
 
 body,
