--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-/*
-.leaflet-fade-anim .leaflet-popup {
-  transition: none;
-} */
-
 #title1 {
   color: #fff;
   text-shadow:
@@ -15,11 +10,13 @@
 #intro {
   background-image: url('/img/subway1.jpg');
   color: #FFFFFF;
-  height: 100%;
+  /* height: 100%; */
   /* margin-left: 0;
   margin-right: 0; */
-  background-size: cover;
-  background-position: center center;
+  background-size:contain;
+  background-position:center;
+  /* background-size: cover; */
+  /* background-position: center center; */
   background-repeat: no-repeat;
 }
 
@@ -48,13 +45,14 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 2;
 }
 
 #panel {
   background-color: black;
   margin-left: 0;
   margin-right: 0;
-  width: 100%;
+  /* width: 100%; */
   height: 20%;
   padding-top: 2rem;
   padding-bottom: 4rem;
@@ -73,7 +71,7 @@ body {
 /* Side bar/navigation bar */
 #sidebar-wrapper {
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   right: 0;
   width: 250px;
   height: 100%;
@@ -83,7 +81,7 @@ body {
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: $primary;
+  background: #fff;
   border-left: 1px solid fade-out($white, 0.9);
 }
 
@@ -102,14 +100,13 @@ body {
 .sidebar-nav li.sidebar-nav-item a {
   display: block;
   text-decoration: none;
-  color: $white;
   padding: 15px;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
   color: #fff;
-  background: rgba(255, 255, 255, .2);
+  background: #004d99;
 }
 
 .sidebar-nav li a:active,
@@ -119,7 +116,7 @@ body {
 
 .sidebar-nav > .sidebar-brand {
   font-size: 1.2rem;
-  background: fade-out($gray-800, .9);
+  background: #004d99;
   height: 80px;
   line-height: 50px;
   padding-top: 15px;
@@ -133,7 +130,7 @@ body {
 
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
-  background: none;
+  background: #004d99;
 }
 
 #sidebar-wrapper.active {
@@ -204,9 +201,9 @@ h6 {
   font-weight: 700;
 }
 
-.text-faded {
+/* .text-faded {
   color: rgba(255, 255, 255, 0.7);
-}
+} */
 
 .masthead {
   min-height: 30rem;
