--- a/css/styles.css
+++ b/css/styles.css
@@ -8,26 +8,30 @@
 }
 
 #intro {
+
   background-image: url('/img/subway1.jpg');
   color: #FFFFFF;
-  /* height: 100%; */
+  height: 100%;
+  width: 100%;
   /* margin-left: 0;
   margin-right: 0; */
-  background-size:contain;
-  background-position:center;
+  /* background-size: contain; */
+  background-position: center center;
   /* background-size: cover; */
   /* background-position: center center; */
   background-repeat: no-repeat;
+  /* background-attachment: fixed; */
+  background-size: cover;
 }
 
 #paragraph {
   /* min-height: 30rem; */
   /* position: relative; */
-  display: table;
+  /* display: table; */
   /* width: 100%; */
-  height: auto;
+  /* height: auto;
   padding-top: 5rem;
-  padding-bottom: 8rem;
+  padding-bottom: 8rem; */
   /* vertical-align: middle; */
   color: #FFFFFF;
   text-shadow:
