--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,48 @@
-#page-top {
-  background-image: url('/img/subway2.jpg');
+body, html {
+  width: 100%;
+  height: 100%;
 }
 
-#title1 {
-  color: #fff;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+body {
+  font-family: 'Trebuchet MS';
 }
 
-#intro {
-  background-image: url('/img/subway1.jpg');
+.container {
   color: #FFFFFF;
+}
+
+.container h1 {
+  font-size: 4rem;
+  margin: 0;
+  padding: 0;
+}
+
+/***********/
+/*Sections*/
+/**********/
+#first {
+  background-image: url('/img/subway1.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
   width: 100%;
-  /* margin-left: 0;
-  margin-right: 0; */
-  /* background-size: contain; */
-  background-position: center center;
-  /* background-size: cover; */
-  /* background-position: center center; */
-  background-repeat: no-repeat;
-  /* background-attachment: fixed; */
-  background-size: cover;
+  padding-top: 20.5rem;
+  padding-bottom: 10.5rem;
 }
 
-#paragraph {
-  /* min-height: 30rem; */
-  /* position: relative; */
-  /* display: table; */
-  /* width: 100%; */
-  /* height: auto;
-  padding-top: 5rem;
-  padding-bottom: 8rem; */
-  /* vertical-align: middle; */
+#second {
+  background-image: url('/img/subway2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  padding-top: 10.5rem;
+  padding-bottom: 10.5rem;
   color: #FFFFFF;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
-  ;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 #subway-map {
@@ -48,23 +56,91 @@
 }
 
 #panel {
-  background-color: white;
+  background-color: black;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 20%;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-body, html {
   width: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+#panel-body {
+  width: 70%;
+}
+
+#last-page {
+  background-color: #fff;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-body {
-  font-family: 'Source Sans Pro';
+/************/
+/* Elements */
+/************/
+.title {
+  color: #fff;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 }
 
+.paragraph {
+  color: #FFFFFF;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+  ;
+}
+
+.sources {
+  font-size: 10px;
+  text-align: right;
+  color: #FFFFFF;
+}
+
+/***********
+** Legend **
+************/
+#panel-legend {
+  width: 30%;
+  /* height: 15%; */
+  margin-right: 0;
+  z-index: 4;
+  float: right;
+  right: 2px;
+  padding: 2px;
+  background: #000;
+  color: #fff;
+  border-radius: 0px;
+  text-align: right;
+  /* bottom: 10%; */
+  font-size: 12px;
+}
+
+.legend{
+  display: block;
+}
+
+.colorBox {
+  height: 8px;
+  width: 8px;
+  float: right;
+  margin: 3px 4px 0 0;
+}
+
+.legendItem {
+  font-size: 9px;
+  float: right;
+  color: #fff;
+  padding-right: 2px;
+}
+
+
+/***************************/
 /* Side bar/navigation bar */
-
+/***************************/
 #sidebar-wrapper {
   position: fixed;
   z-index: 3;
@@ -78,6 +154,7 @@ body {
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
   background: #fff;
+  color: white;
   border-left: 1px solid fade-out($white, 0.9);
 }
 
@@ -109,8 +186,9 @@ body {
 }
 
 .sidebar-nav>.sidebar-brand {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   background: #004d99;
+  color: #fff;
   height: 80px;
   line-height: 50px;
   padding-top: 15px;
@@ -124,7 +202,6 @@ body {
 
 .sidebar-nav>.sidebar-brand a:hover {
   color: #fff;
-  background: #004d99;
 }
 
 #sidebar-wrapper.active {
@@ -145,7 +222,7 @@ body {
   height: 50px;
   text-align: center;
   color: $white;
-  background: fade-out($gray-800, .5);
+  background: white;
   line-height: 50px;
   z-index: 999;
   &:focus, &:hover {
@@ -153,49 +230,11 @@ body {
   }
   &:hover {
     background: $gray-800;
+    color: $white;
   }
   &.active {
     // background-color: #004d99;
     // color: $gray-900;
-  }
-}
-
-.content-section {
-  padding-top: 7.5rem;
-  padding-bottom: 7.5rem;
-}
-
-.content-section-heading h2 {
-  font-size: 3rem;
-}
-
-.content-section-heading h3 {
-  font-size: 1rem;
-  text-transform: uppercase;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
-}
-
-.masthead {
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.masthead h1 {
-  font-size: 4rem;
-  margin: 0;
-  padding: 0;
-}
-
-@media (min-width: 992px) {
-  .masthead {
-    height: 100vh;
-  }
-  .masthead h1 {
-    font-size: 5.5rem;
   }
 }
 
@@ -224,16 +263,29 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 800;
 }
 
+/**********/
+/* links */
+/*********/
 a {
-  color: #0066cc;
+  color: #fff;
 }
 
 a:hover, a:focus, a:active {
   color: #004d99;
 }
 
-/* Navigation buttons */
+/* unvisited link */
+a:link {
+    color: #004d99;
+}
 
+/* visited link */
+a:visited {
+    color: #004d99;
+}
+/***********************/
+/* Navigation buttons */
+/**********************/
 .btn-xl {
   padding: 1.25rem 2.5rem;
 }
@@ -249,9 +301,74 @@ a:hover, a:focus, a:active {
   border-color: #004d99 !important;
 }
 
+/******************/
 /* Panel buttons */
+/*****************/
+.btn {
+  margin: 2px;
+}
+
+.btn-ada {
+  border-color: #000;
+  background-color: #00cc66;
+  color: #fff;
+}
 
 .btn-ada:hover {
+  border-color: #00cc66;
+  background-color: #fff;
+  color: #00cc66;
+}
+
+.btn-nada {
+  border-color: #000;
+  background-color: #ff0000;
+  color: #fff;
+}
+
+.btn-nada:hover {
+  border-color: #000;
+  background-color: #fff;
+  color: #ff0000;
+}
+
+.btn-all {
+  border-color: #000;
+  background-color: #004d99;
+  color: #fff;
+}
+
+.btn-all:hover {
+  border-color: #000;
+  background-color: #fff;
+  color: #004d99;
+}
+
+.btn-lines {
+  border-color: #000;
+  background-color: #ff9900;
+  color: #fff;
+}
+
+.btn-lines:hover {
+  border-color: #000;
+  background-color: #fff;
+  color: #ff9900;
+}
+
+.btn-bus {
+  border-color: #000;
+  background-color: #A486B2;
+  color:#fff;
+}
+
+.btn-bus:hover {
+  border-color: #000;
+  background-color: #fff;
+  color: #A486B2;
+}
+
+/* .btn-ada:hover {
   border-color: #000 !important;
   background-color: #00cc66 !important;
 }
@@ -263,13 +380,19 @@ a:hover, a:focus, a:active {
 
 .btn-all:hover {
   border-color: #000 !important;
-  background-color: steelblue !important;
+  background-color: #000 !important;
+  color: #fff;
 }
 
 .btn-lines:hover {
   border-color: #000 !important;
   background-color: #ff9900 !important;
 }
+
+.btn-bus:hover {
+  border-color: #000 !important;
+  background-color: #A486B2 !important;
+} */
 
 .btn-dark {
   color: #fff !important;
