--- a/css/styles.css
+++ b/css/styles.css
@@ -7,15 +7,20 @@ body {
   font-family: 'Trebuchet MS';
 }
 
-.container {
+/* .container {
   color: #FFFFFF;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .container h1 {
-  font-size: 4rem;
+  font-size: 3rem;
   margin: 0;
   padding: 0;
-}
+} */
 
 /***********/
 /*Sections*/
@@ -103,14 +108,33 @@ body {
 .paragraph {
   color: #FFFFFF;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.paragraph h1 {
+  font-size: 3rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 .paragraph-not-shaded {
   color: #FFFFFF;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
 }
 
 .sources {
-  font-size: 10px;
+  font-size: 9px;
   text-align: right;
   color: #FFFFFF;
   margin-right: 25px;
@@ -134,7 +158,7 @@ body {
   border-radius: 0px;
   text-align: right;
   /* bottom: 10%; */
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .legend{
@@ -149,7 +173,7 @@ body {
 }
 
 .legendItem {
-  font-size: 9px;
+  font-size: 8px;
   float: right;
   color: #fff;
   padding-right: 2px;
