--- a/css/styles.css
+++ b/css/styles.css
@@ -7,24 +7,10 @@ body {
   font-family: 'Trebuchet MS';
 }
 
-/* .container {
-  color: #fff;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.container h1 {
-  font-size: 3rem;
-  margin: 0;
-  padding: 0;
-} */
-
 /***********/
 /*Sections*/
 /**********/
+
 #first {
   background-image: url('https://assets.bwbx.io/images/users/iqjWHBFdfxIU/i9CM_YafJQ2w/v1/-1x-1.jpg');
   background-position: center center;
@@ -37,7 +23,7 @@ body {
 }
 
 #second {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('https://cdn.newsday.com/polopoly_fs/1.16465836.1517441155!/httpImage/image.jpeg_gen/derivatives/landscape_1280/image.jpeg');
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.newsday.com/polopoly_fs/1.16465836.1517441155!/httpImage/image.jpeg_gen/derivatives/landscape_1280/image.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -64,12 +50,6 @@ body {
   height: 30rem;
 }
 
-@media (max-width: 992px) {
-  .map {
-    height: 75%;
-  }
-}
-
 #panel {
   background-color: #000;
   background-position: center center;
@@ -81,29 +61,26 @@ body {
   padding-bottom: 1rem;
 }
 
-#panel-body {
-  /* width: 70%; */
-  width: 100%;
-}
-
 #last-page {
   background-color: #fff;
-  background-image: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('https://cdn.newsday.com/polopoly_fs/1.13754245.1498090663!/httpImage/image.jpeg_gen/derivatives/landscape_1280/image.jpeg');
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://cdn.newsday.com/polopoly_fs/1.13754245.1498090663!/httpImage/image.jpeg_gen/derivatives/landscape_1280/image.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 10.5rem;
+  padding-bottom: 10.5rem;
 }
 
 /************/
 /* Elements */
 /************/
+
 .shaded-text {
   color: #fff;
-  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+  text-shadow: -2px -1px 0 #000, 2px -1px 0 #000, -2px 1px 0 #000, 2px 2px 0 #000;
 }
+
 .paragraph {
   color: #fff;
   width: 100%;
@@ -121,28 +98,28 @@ body {
   text-align: center;
 }
 
-.paragraph-not-shaded {
-  color: #fff;
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
-}
-
 .sources {
   font-size: 9px;
   text-align: right;
   color: #fff;
-  margin-right: 25px;
-  margin-top: 10%;
+  margin-right: 65px;
   margin-bottom: 0;
+}
+
+.sources-map {
+  color:'#fff';
+  font-size: 8px;
+  margin-right:250px;
+}
+
+.everythingOnOneLine * {
+ display: inline;
 }
 
 /***************************/
 /* Side bar/navigation bar */
 /***************************/
+
 #sidebar-wrapper {
   position: fixed;
   z-index: 3;
@@ -190,7 +167,7 @@ body {
 
 .sidebar-nav li a:active, .sidebar-nav li a:focus {
   text-decoration: none;
-  color:#666666;
+  color: #666666;
 }
 
 .sidebar-nav>.sidebar-brand {
@@ -274,13 +251,6 @@ body {
 /**********/
 /* links */
 /*********/
-/* .sidebar-brand li a {
-  color: #fff;
-}
-
-.sidebar-brand li a:active {
-  color: #fff;
-} */
 
 .sources a {
   color: #fff;
@@ -292,12 +262,12 @@ body {
 
 /* unvisited link */
 .sources a:link {
-    color: #fff;
+  color: #fff;
 }
 
 /* visited link */
 .sources a:visited {
-    color: #fff;
+  color: #fff;
 }
 
 .paragraph a {
@@ -310,17 +280,18 @@ body {
 
 /* unvisited link */
 .paragraph a:link {
-    color: #fff;
+  color: #fff;
 }
 
 /* visited link */
 .paragraph a:visited {
-    color: #fff;
+  color: #fff;
 }
 
 /***********************/
 /* Navigation buttons */
 /**********************/
+
 .btn-xl {
   padding: 1.25rem 2.5rem;
 }
@@ -339,8 +310,11 @@ body {
 /******************/
 /* Panel buttons */
 /*****************/
+
 .btn {
   margin: 2px;
+  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
+  font-weight: 700;
 }
 
 .btn-ada {
@@ -365,11 +339,6 @@ body {
   border-color: #000;
   background-color: #fff;
   color: #cc0000;
-}
-
-.btn {
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.1);
-  font-weight: 700;
 }
 
 .bg-primary {
